header & footer style

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,13 @@
-<p>header works!</p>
+<div class="navbar">
+    <h1 class="heading" [routerLink]="'/home'">Hi, i'm Georgi</h1>
+
+    <div class="links">
+        <ul>
+            <li><a [routerLink]="'/home'">Home</a></li>
+            <li><a [routerLink]="'/about'">About</a></li>
+            <li><a [routerLink]="'/work'">Work</a></li>
+            <li><a [routerLink]="'/skills'">Skills</a></li>
+            <li><a [routerLink]="'/contact'">Contact</a></li>
+        </ul>
+    </div>
+</div>
