--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,8 @@
-<p>footer works!</p>
+<div class="footer">
+    <div class="social">
+        <a href="https://www.instagram.com/itspavlov/?hl=en"><i class="fa fa-instagram fa-2x"></i></a>
+        <a href="https://github.com/GeorgePavlov17"><i class="fa fa-github fa-2x"></i></a>
+        <a href="https://www.linkedin.com/in/georgi-pavlov-18401620b/"><i class="fa fa-linkedin-square fa-2x"></i></a>
+        <p>Copyright &copy; 2023</p>
+    </div>
+</div>
