about component small fix

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,12 +1,12 @@
 <app-header></app-header>
 
 <div class="container">
-    <i class="fa fa-university fa-2x"></i> <h2>Education and courses</h2>
+    <i class="fa fa-graduation-cap fa-2x"></i> <h2>Education and courses</h2>
 </div>
 
 <div class="university">
     <div class="university-card">
-        <img src="../../assets/images/1200px-Tu-sofia-logo.svg.png" alt="">
+        <img src="../../assets/images/tu.png" alt="">
         <h3>Technical University Sofia - Branch Plovidv</h3>
         <p>Industrial Management - 'Engineer - Manager'</p>
     </div>
@@ -16,7 +16,7 @@
         <p>Learning JavaScript from the basics to the advanced JS practices.</p>
     </div>
     <div class="university-card">
-        <img src="../../assets/images/default-meta-image-v2.png" alt="">
+        <img src="../../assets/images/udemy.png" alt="">
         <h3>Udemy</h3>
         <p>Going thru different courses - JavaScript, HTML & CSS, Angular</p>
     </div>
