--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -6,7 +6,7 @@
 
 .container {
     display: flex;
-    padding: 24px;
+    margin-top: 48px;
     flex-direction: row;
     width: 100%;
     align-items: center;
