--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,34 +1,32 @@
 <app-header></app-header>
 
-<div class="flex-container">
-        <div class="contact-header">
-           <h2>Contact Me</h2>
-        </div>
+<div class="container">
+    <div class="contact-header">
+        <h2>Contact Me</h2>
+    </div>
     
-        <div class="contact-cards">
-            <span class="card">
-                <i class="fa fa-envelope fa-2x"></i> 
-                <a href="mailto:georgipavlov17@gmail.com">georgipavlov17@gmail.com</a>
-            </span>
-            <span class="card">
-                <i class="fa fa-mobile fa-2x"></i> 
-                <a href="tel:+359897802007">+359897802007</a>
-            </span>
-        </div>
+    <div class="contact-cards">
+        <span class="card">
+            <i class="fa fa-envelope fa-2x"></i> 
+            <a href="mailto:georgipavlov17@gmail.com">georgipavlov17@gmail.com</a>
+        </span>
+        <span class="card">
+            <i class="fa fa-mobile fa-2x"></i> 
+            <a href="tel:+359897802007">+359897802007</a>
+        </span>
+    </div>
     
-    <div class="input">
-        <div class="input-box">
-            <div class="contact-input">
-                <input type="text" placeholder="Name">
-            </div>
-            <div class="contact-input">
-                <input type="text" placeholder="Email">
-            </div>
-            <div class="contact-textarea">
-                <textarea type="text" placeholder="Message"></textarea>
-            </div>
-            <button type="button">Submit</button>
+    <div class="input-box">
+        <div class="contact-input">
+            <input type="text" placeholder="Name">
         </div>
+        <div class="contact-input">
+            <input type="text" placeholder="Email">
+        </div>
+        <div class="contact-input">
+            <textarea type="text" placeholder="Message"></textarea>
+        </div>
+        <button type="button">Submit</button>
     </div>
 </div>
 
