--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -1,8 +1,10 @@
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
-.flex-container {
+.container {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -16,7 +18,7 @@
     text-align: center;
     color: #333;
     opacity: 0.5;
-    margin-top: 25px;
+    margin-top: 48px;
 }
 
 .contact-cards {
@@ -46,15 +48,8 @@
     font-size: 20px;
 }
 
-.input {
-    flex-direction: column;
-    text-align: center;
-    padding: 10px;
-    margin-bottom: 113px;
-}
-
 .contact-input {
-    margin: 20px;
+    width: 100%;
 }
 
 input {
@@ -63,13 +58,21 @@ input {
     font-size: 1rem;
     outline: none;
     padding: 16px;
+    margin: 20px;
     border-radius: 10px;
     width: 50%;
 }
 
 .input-box {
-    margin: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 10px;
     width: 100%;
+    margin-top: 35px;
+    margin-bottom: 118px;
 }
 
 textarea {
@@ -77,19 +80,21 @@ textarea {
     border: 1px solid #9f9b9b;
     font-size: 1rem;
     outline: none;
-    padding: 15px;
+    padding: 16px;
     border-radius: 10px;
-    width: 48.8%;
+    margin: 20px;
+    width: 50%;
     height: 100px;
-    margin-bottom: 25px;
 }
 
 button {
     background-color: #f4f4f4;
     border: none;
-    font-size: 1rem;
+    font-size: 24px;
     outline: none;
-    padding: 16px;
+    padding: 10px;
+    color: blue;
+    opacity: 0.5;
     border-radius: 10px;
     cursor: pointer;
     width: 20%;
