--- a/src/app/work/work.component.html
+++ b/src/app/work/work.component.html
@@ -1,1 +1,49 @@
-<p>work works!</p>
+<app-header></app-header>
+
+<div class="container">
+
+    <div class="heading">
+        <h2><i class="fa fa-cogs"></i> My projects</h2>
+    </div>
+
+    <div class="projects">
+        <div class="card">
+            <div>
+                <img src="../../assets/images/projects/taskapp.jpg">
+            </div>
+            <div class="info">
+                <h4>Task app</h4>
+                <p>Task app in which you can write your notes.</p>
+            </div>
+        </div>
+        <div class="card">
+            <div>
+                <img src="../../assets/images/projects/weatherapp.jpg">
+            </div>
+            <div class="info">
+                <h4>Weather app</h4>
+                <p>Weather app in getting data from API.</p>
+            </div>
+        </div>
+        <div class="card">
+            <div>
+                <img src="../../assets/images/projects/ecommerce.jpg">
+            </div>
+            <div class="info">
+                <h4>E-commerce app</h4>
+                <p>E-commerce app for online shopping.</p>
+            </div>
+        </div>
+        <div class="card">
+            <div>
+                <img src="../../assets/images/projects/movieapp.jpg">
+            </div>
+            <div class="info">
+                <h4>Movie app</h4>
+                <p>Movie app in which you can browse and search movies.</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<app-footer></app-footer>
