--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 
 <div class="container">
-    <i class="fa fa-graduation-cap fa-2x"></i> <h2>Education and courses</h2>
+    <h2><i class="fa fa-graduation-cap"></i>Education and courses</h2>
 </div>
 
 <div class="university">
