--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -14,11 +14,18 @@
     flex-direction: row;
     justify-content: center;
     display: flex;
-    font-size: 24px;
+    font-size: 2rem;
+    font-weight: bold;
     text-align: center;
     color: #333;
     opacity: 0.5;
     margin-top: 48px;
+
+    &:hover {
+        color: blue;
+        opacity: 0.5;
+        cursor: pointer;
+    }
 }
 
 .contact-cards {
