--- a/src/app/work/work.component.html
+++ b/src/app/work/work.component.html
@@ -10,6 +10,8 @@
         <div class="card">
             <div>
                 <img src="../../assets/images/projects/taskapp.jpg">
+                <a href="https://github.com/GeorgePavlov17/task-app"><i class="fa fa-github fa-2x"></i></a>
+                <!-- <div class="shader"></div> -->
             </div>
             <div class="info">
                 <h4>Task app</h4>
@@ -19,15 +21,17 @@
         <div class="card">
             <div>
                 <img src="../../assets/images/projects/weatherapp.jpg">
+                <a href="https://github.com/GeorgePavlov17/weather-app"><i class="fa fa-github fa-2x"></i></a>
             </div>
             <div class="info">
                 <h4>Weather app</h4>
-                <p>Weather app in getting data from API.</p>
+                <p>Weather app getting data from API.</p>
             </div>
         </div>
         <div class="card">
             <div>
                 <img src="../../assets/images/projects/ecommerce.jpg">
+                <a href="https://github.com/GeorgePavlov17/ecommerce-app"><i class="fa fa-github fa-2x"></i></a>
             </div>
             <div class="info">
                 <h4>E-commerce app</h4>
@@ -37,6 +41,7 @@
         <div class="card">
             <div>
                 <img src="../../assets/images/projects/movieapp.jpg">
+                <a href="https://github.com/GeorgePavlov17/movie-app"><i class="fa fa-github fa-2x"></i></a>
             </div>
             <div class="info">
                 <h4>Movie app</h4>
