--- a/src/app/work/work.component.scss
+++ b/src/app/work/work.component.scss
@@ -8,7 +8,7 @@
     // display: flex;
     // flex-direction: row;
     margin-top: 24px;
-    margin-bottom: 155px;
+    margin-bottom: 140px;
 }
 
 .heading {
@@ -50,6 +50,10 @@ h2:hover {
     margin: 20px;
     padding: 10px;
     width: 290px;
+
+    &:hover {
+        box-shadow: 0 5px 10px rgb(5 5 5 / 30%);
+    }
 }
 
 img {
@@ -57,6 +61,10 @@ img {
     height: 260px;
     border-radius: 10px;
     object-fit: cover;
+
+    &:hover {
+
+    }
 }
 
 h4 {
@@ -66,4 +74,18 @@ h4 {
 }
 .info {
     margin-bottom: 8px;
+}
+
+.shader {
+    opacity: 0;
+    display: flex;
+}
+
+i {
+    color: #333;
+
+    &:hover {
+        color: blue;
+        opacity: 0.5;
+    }
 }
