--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
     <div class="heading">
-        <h2>Skills and Experience</h2>
+        <h2><i class="fa fa-book"></i> Skills and Experience</h2>
     </div>
 
     <div class="container">
