--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,30 @@
 <app-header></app-header>
 
+    <div class="container">
+        <div class="about-me">
+            <span class="personal-info">
+                <p>Hi, I am Georgi</p>
+            </span>
+            <span class="personal-info">
+                <p>Front End developer</p>
+            </span>
+        </div>
+
+        <div class="photo">
+            <img src="../../assets/images/myPhoto.jpg" alt="">
+        </div>
+
+        <div class="techniques">
+            <div class="technique1">
+                <img src="../../assets/images/js.png" alt="">
+            </div>
+            <div class="technique2">
+                <img src="../../assets/images/ts.png" alt="">
+            </div>
+            <div class="technique3">
+                <img src="../../assets/images/angular.png" alt="">
+            </div>
+        </div>
+    </div>
+
 <app-footer></app-footer>
