--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -3,15 +3,21 @@
     flex-direction: row;
     justify-content: space-around;
     margin-top: 48px;
-    margin-bottom: 95px;
+    margin-bottom: 149px;
+
+    @media screen and (max-width: 768px) {
+        width: 100%;
+        margin: 0 0 16px 0;
+    }
 }
 
 img {
     object-fit: contain;
-    width: 100%;
+    width: 30%;
+    height: 90%;
     // width: 550px;
     // height: 550px;
-    border-radius: 10%;
+    border-radius: 50%;
     margin: 24px;
     cursor: pointer;
 
@@ -21,16 +27,15 @@ img {
 }
 
 .photo {
-    display: flex;
-    height: 70%;
-    
+    display: contents;
     position: relative;
 }
 
-.photo > img {
-    width: 70%;
-    border-radius: 50%;
-}
+// .photo > img {
+//     width: 35%;
+//     height: 90%;
+//     border-radius: 50%;
+// }
 
 .techniques {
     display: flex;
@@ -96,4 +101,124 @@ img {
 p {
     padding-left: 15px;
     padding-right: 15px;
+}
+
+@media screen and (max-width: 500px) {
+    .navbar {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .heading {
+        margin: 5px;
+        font-size: 15px;
+    }
+
+    .heading > h1 {
+        margin: 8px;
+        font-size: 20px;
+    }
+
+    .links {
+        padding: 2px;
+    }
+
+    .container {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+    
+    .photo {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        margin: 8px;
+    }
+
+    .photo > img {
+        width: 170px;
+        height: 170px;
+        margin: 5px;
+    }
+
+    .about-me {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        margin-top: 8px;
+    }
+
+    .personal-info {
+        margin: 5px;
+        font-size: 20px;
+    }
+
+    .techniques {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+    }
+
+    .technique1 {
+        display: flex;
+        align-items: center;
+        margin-right: 85px;
+    }
+
+    .technique2 {
+        display: flex;
+        align-items: center;
+        margin-right: 20px;
+    }
+
+    .technique3 {
+        display: flex;
+        align-items: center;
+        margin-right: 50px;
+    }
+
+    .technique1 > img {
+        width: 130px;
+        height: 130px;
+        margin: 5px;
+        border-radius: 50%;
+    }
+
+    .technique2 > img {
+        width: 110px;
+        height: 110px;
+        margin: 5px;
+        border-radius: 50%;
+    }
+
+    .technique3 > img {
+        width: 110px;
+        height: 110px;
+        margin: 5px;
+        border-radius: 50%;
+    }
+
+    .footer {
+        padding: 2px;
+    }
+
+    .footer > p {
+        margin: 5px;
+    }
+
+    .social > a {
+        margin-top: 5px;
+    }
+
+    .social > p {
+        margin: 8px;
+    }
+
+    p {
+        margin: 5px;
+    }
+    
 }
