--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="navbar">
-    <h1 class="heading" [routerLink]="'/home'">Georgi</h1>
+    <h1 class="heading" [routerLink]="'/home'"><i class="fa fa-terminal"></i> Georgi</h1>
 
     <div class="links">
         <ul>
