--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,10 +3,10 @@
     <div class="container">
         <div class="about-me">
             <span class="personal-info">
-                <p>Hi, I am Georgi</p>
+                <p>Hi, I am Georgi Pavlov</p>
             </span>
             <span class="personal-info">
-                <p>Front End developer</p>
+                <p>Front End Developer</p>
             </span>
         </div>
 
