about mobile view

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -78,3 +78,22 @@ img {
         }
     }
 }
+
+@media screen and (max-width: 500px) {
+    .container {
+        margin-top: 24px;
+    }
+
+    .container > h2 {
+        font-size: 24px;
+    }
+
+    .university {
+        flex-direction: column;
+        margin: 35px;
+    }
+
+    .university-card {
+
+    }
+}
