work component mobile view

--- a/src/app/work/work.component.html
+++ b/src/app/work/work.component.html
@@ -8,7 +8,7 @@
 
     <div class="projects">
         <div class="card">
-            <div>
+            <div class="img">
                 <img src="../../assets/images/projects/taskapp.jpg">
                 <a href="https://github.com/GeorgePavlov17/task-app"><i class="fa fa-github fa-2x"></i></a>
                 <!-- <div class="shader"></div> -->
@@ -19,7 +19,7 @@
             </div>
         </div>
         <div class="card">
-            <div>
+            <div class="img">
                 <img src="../../assets/images/projects/weatherapp.jpg">
                 <a href="https://github.com/GeorgePavlov17/weather-app"><i class="fa fa-github fa-2x"></i></a>
             </div>
@@ -29,7 +29,7 @@
             </div>
         </div>
         <div class="card">
-            <div>
+            <div class="img">
                 <img src="../../assets/images/projects/ecommerce.jpg">
                 <a href="https://github.com/GeorgePavlov17/ecommerce-app"><i class="fa fa-github fa-2x"></i></a>
             </div>
@@ -39,7 +39,7 @@
             </div>
         </div>
         <div class="card">
-            <div>
+            <div class="img">
                 <img src="../../assets/images/projects/movieapp.jpg">
                 <a href="https://github.com/GeorgePavlov17/movie-app"><i class="fa fa-github fa-2x"></i></a>
             </div>
