--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -2,13 +2,13 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    margin-top: 48px;
-    margin-bottom: 149px;
+    // margin-top: 48px;
+    margin-bottom: 28px;
 
-    @media screen and (max-width: 768px) {
-        width: 100%;
-        margin: 0 0 16px 0;
-    }
+    // @media screen and (max-width: 768px) {
+    //     width: 100%;
+    //     margin: 0 0 16px 0;
+    // }
 }
 
 img {
@@ -27,7 +27,10 @@ img {
 }
 
 .photo {
-    display: contents;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     position: relative;
 }
 
@@ -40,6 +43,7 @@ img {
 .techniques {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .technique1 {
