--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -28,6 +28,10 @@
     }
 }
 
+.contact-header > h2 {
+    font-size: 2.5rem;
+}
+
 .contact-cards {
     flex-direction: row;
     justify-content: center;
@@ -79,7 +83,7 @@ input {
     padding: 10px;
     width: 100%;
     margin-top: 35px;
-    margin-bottom: 108px;
+    margin-bottom: 117px;
 }
 
 textarea {
@@ -122,6 +126,7 @@ i {
 @media screen and (max-width: 500px) {
     .container {
         flex-wrap: nowrap;
+        margin-bottom: 120px;
     }
 
     .contact-header {
