--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,8 +2,14 @@
 
     <div class="container">
         <div class="about-me">
+            <span class="personal-info" id="first-span">
+                <p>Hi !</p>
+            </span>
             <span class="personal-info">
-                <p>Hi, I am Georgi Pavlov</p>
+                <p>My name is Georgi</p>
+            </span>
+            <span class="personal-info">
+                <p>I work as a</p>
             </span>
             <span class="personal-info">
                 <p>Front End Developer</p>
