work component responsive fix

--- a/src/app/work/work.component.scss
+++ b/src/app/work/work.component.scss
@@ -90,6 +90,13 @@ i {
     }
 }
 
+@media screen and (max-width: 1200px) {
+    .projects {
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
 //Tablets
 @media screen and (max-width: 800px) {
     .container {
