--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -100,6 +100,12 @@ img {
     opacity: 0.5;
 }
 
+@media screen and(max-width: 1200px) {
+    .skills-container {
+        flex-direction: column;
+    }
+}
+
 //Tablets
 @media screen and (max-width: 800px) {
     .heading > h2 {
