--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -104,6 +104,19 @@ p {
     padding-right: 15px;
 }
 
+@media screen and (max-width: 1200px) {
+    .container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    img {
+        width: 550px;
+        height: 550px;
+        margin: 12px;
+    }
+}
+
 //Tablets
 @media screen and (max-width: 800px) {
     .container {
