--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -48,6 +48,10 @@
             &:hover {
                 border-bottom: blue 2px solid;
             }
+
+            &:active {
+                border-bottom: blue 2px solid;
+            }
         }
     }
 }
