adding animations to home component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,19 +5,19 @@
             <span class="personal-info" id="first-span">
                 <p>Hi !</p>
             </span>
-            <span class="personal-info">
+            <span class="personal-info" id="second-span">
                 <p>My name is Georgi</p>
             </span>
-            <span class="personal-info">
+            <span class="personal-info" id="third-span">
                 <p>I work as a</p>
             </span>
-            <span class="personal-info">
+            <span class="personal-info" id="fourth-span">
                 <p>Front End Developer</p>
             </span>
         </div>
 
         <div class="photo">
-            <img src="../../assets/images/myPhoto.jpg" alt="">
+            <img id="my-img" src="../../assets/images/cv photo.jpg" alt="">
         </div>
 
         <div class="techniques">
