--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -7,11 +7,11 @@
     
     <div class="contact-cards">
         <span class="card">
-            <i class="fa fa-envelope fa-2x"></i> 
+            <i class="fa fa-envelope-o fa-2x"></i> 
             <a href="mailto:georgipavlov17@gmail.com">georgipavlov17@gmail.com</a>
         </span>
         <span class="card">
-            <i class="fa fa-mobile fa-2x"></i> 
+            <i class="fa fa-phone-square fa-2x"></i> 
             <a href="tel:+359897802007">+359897802007</a>
         </span>
     </div>
