header active class

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,11 +3,11 @@
 
     <div class="links">
         <ul>
-            <li><a [routerLink]="'/home'">Home</a></li>
-            <li><a [routerLink]="'/about'">About</a></li>
-            <li><a [routerLink]="'/work'">Work</a></li>
-            <li><a [routerLink]="'/skills'">Skills</a></li>
-            <li><a [routerLink]="'/contact'">Contact</a></li>
+            <li><a [routerLink]="'/home'" [routerLinkActive]="['selected-page']">Home</a></li>
+            <li><a [routerLink]="'/about'" [routerLinkActive]="['selected-page']">About</a></li>
+            <li><a [routerLink]="'/work'" [routerLinkActive]="['selected-page']">Work</a></li>
+            <li><a [routerLink]="'/skills'" [routerLinkActive]="['selected-page']">Skills</a></li>
+            <li><a [routerLink]="'/contact'" [routerLinkActive]="['selected-page']">Contact</a></li>
         </ul>
     </div>
 </div>
