--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -18,7 +18,7 @@
     <div class="university-card">
         <img src="../../assets/images/udemy.png" alt="">
         <h3>Udemy</h3>
-        <p>Going thru different courses - JavaScript, HTML & CSS, Angular</p>
+        <p>Going through different courses - JavaScript, HTML & CSS, Angular</p>
     </div>
 </div>
 
