--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -8,7 +8,7 @@
     <div class="contact-cards">
         <span class="card">
             <i class="fa fa-envelope-o fa-2x"></i> 
-            <a href="mailto:georgipavlov17@gmail.com">georgipavlov17@gmail.com</a>
+            <a href="mailto:georgipavlov17@gmail.com">georgipavlov17&#64;gmail.com</a>
         </span>
         <span class="card">
             <i class="fa fa-phone-square fa-2x"></i> 
