--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,63 +1,58 @@
 <app-header></app-header>
-    <div class="heading">
-        <h2><i class="fa fa-book"></i> Skills and Experience</h2>
+<div class="heading">
+  <h2><i class="fa fa-book"></i>{{ "skills.header" | translate }}</h2>
+</div>
+<div class="container">
+  <div class="skills-container">
+    <div class="skill-card">
+      <img src="../../assets/images/js.png" alt="" />
+      <p>JavaScript</p>
     </div>
+    <div class="skill-card">
+      <img src="../../assets/images/ts.png" alt="" />
+      <p>TypeScript</p>
+    </div>
+    <div class="skill-card">
+      <img src="../../assets/images/html.png" alt="" />
+      <p>HTML</p>
+    </div>
+    <div class="skill-card">
+      <img src="../../assets/images/css.png" alt="" />
+      <p>CSS</p>
+    </div>
+    <div class="skill-card">
+      <img src="../../assets/images/angular.png" alt="" />
+      <p>Angular</p>
+    </div>
+    <div class="skill-card">
+      <img src="../../assets/images/ionic.png" alt="" />
+      <p>Ionic</p>
+    </div>
+    <div class="skill-card">
+      <img src="../../assets/images/sass.png" alt="" />
+      <p>SASS</p>
+    </div>
+    <div class="skill-card">
+      <img src="../../assets/images/git.png" />
+      <p>Git</p>
+    </div>
+  </div>
+  <div class="experience-container">
+    <div class="section">
+      <div class="year">
+        <h4>June 2022</h4>
+      </div>
+      <div class="company">Junior Front-End Developer</div>
+      <p>billiton internet services Gmbh</p>
+    </div>
+    <div class="section">
+      <div class="year">
+        <h4>April 2022</h4>
+      </div>
+      <div class="company">Intern Front-End Developer</div>
+      <p>billiton internet services Gmbh</p>
+    </div>
+  </div>
+</div>
 
-    <div class="container">
-        <div class="skills-container">
-            <div class="skill-card">
-                <img src="../../assets/images/js.png" alt="">
-                <p>JavaScript</p>
-            </div>
-            <div class="skill-card">
-                <img src="../../assets/images/ts.png" alt="">
-                <p>TypeScript</p>
-            </div>
-            <div class="skill-card">
-                <img src="../../assets/images/html.png" alt="">
-                <p>HTML</p>
-            </div>
-            <div class="skill-card">
-                <img src="../../assets/images/css.png" alt="">
-                <p>CSS</p>
-            </div>
-            <div class="skill-card">
-                <img src="../../assets/images/angular.png" alt="">
-                <p>Angular</p>
-            </div>
-            <div class="skill-card">
-                <img src="../../assets/images/ionic.png" alt="">
-                <p>Ionic</p>
-            </div>
-            <div class="skill-card">
-                <img src="../../assets/images/sass.png" alt="">
-                <p>SASS</p>
-            </div>
-            <div class="skill-card">
-                <img src="../../assets/images/git.png">
-                <p>Git</p>
-            </div>
-        </div>
-        <div class="experience-container">
-            <div class="section">
-                <div class="year">
-                    <h4>June 2022</h4>
-                </div>
-                <div class="company">
-                    Junior Front-End Developer
-                </div>
-                <p>billiton internet services Gmbh</p>
-            </div>
-            <div class="section">
-                <div class="year">
-                    <h4>April 2022</h4>
-                </div>
-                <div class="company">
-                    Intern Front-End Developer
-                </div>
-                <p>billiton internet services Gmbh</p>
-            </div>
-        </div>
-    </div>
-    
 <app-footer></app-footer>
