--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,22 +1,22 @@
 <app-header></app-header>
 
 <div class="container">
-    <div class="contact-header">
-        <h2>Contact Me</h2>
-    </div>
-    
-    <div class="contact-cards">
-        <span class="card">
-            <i class="fa fa-envelope-o fa-2x"></i> 
-            <a href="mailto:georgipavlov17@gmail.com">georgipavlov17&#64;gmail.com</a>
-        </span>
-        <span class="card">
+  <div class="contact-header">
+    <h2>{{ "contact.header" | translate }}</h2>
+  </div>
+
+  <div class="contact-cards">
+    <span class="card">
+      <i class="fa fa-envelope-o fa-2x"></i>
+      <a href="mailto:georgipavlov17@gmail.com">georgipavlov17&#64;gmail.com</a>
+    </span>
+    <!-- <span class="card">
             <i class="fa fa-phone-square fa-2x"></i> 
             <a href="tel:+359897802007">+359897802007</a>
-        </span>
-    </div>
-    
-    <div class="input-box">
+        </span> -->
+  </div>
+
+  <!-- <div class="input-box">
         <div class="contact-input">
             <input type="text" placeholder="Name">
         </div>
@@ -27,7 +27,7 @@
             <textarea type="text" placeholder="Message"></textarea>
         </div>
         <button type="button">Submit</button>
-    </div>
+    </div> -->
 </div>
 
 <app-footer></app-footer>
