--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,8 +1,15 @@
 <div class="footer">
-    <div class="social">
-        <a href="https://www.instagram.com/itspavlov/?hl=en"><i class="fa fa-instagram fa-2x"></i></a>
-        <a href="https://github.com/GeorgePavlov17"><i class="fa fa-github fa-2x"></i></a>
-        <a href="https://www.linkedin.com/in/georgi-pavlov-18401620b/"><i class="fa fa-linkedin-square fa-2x"></i></a>
-        <p>&copy; 2023 Georgi Pavlov</p>
-    </div>
+  <div class="social">
+    <a href="https://www.instagram.com/itspavlov/?hl=en"
+      ><i class="fa fa-instagram fa-2x"></i
+    ></a>
+    <a href="https://github.com/GeorgePavlov17"
+      ><i class="fa fa-github fa-2x"></i
+    ></a>
+    <a href="https://www.linkedin.com/in/georgi-pavlov-18401620b/"
+      ><i class="fa fa-linkedin-square fa-2x"></i
+    ></a>
+    <!-- <p>&copy; 2023 Georgi Pavlov</p> -->
+    <p></p>
+  </div>
 </div>
